   -format is:one entry per line,example entry: UUID="abcf" uid=500
-- fix a bug,if udev is enabled,mounted image files were always treated as system volumes.
-- use libgcrypt for stand alone file encryption instead of cryptsetup.Newer stand alone encrypted files will have an extension of ".zC" to
   distinguish them from previous ones that use ".zc".Older versions of zuluCrypt(<4.6.9) will not be able to open encrypted files that
   end with ".zC".
-- add an option in zuluCrypt GUI to specify a truecrypt volume type when saving or restoring a truecrypt header from a backup header file

version 4.7.0
-- various changes and improvements
-- add a plugin named "steghide" that retrives passphrases embeded in other files using "steghide" tool.
-- add a plugin named "luks" that allows opening a LUKS volume using a backup/detached header.
-- add a plugin named "tomb" that allows opening of LUKS volumes from tomb project using keys securely stored in image files.

version 4.7.1
-- fix a build issue in gcc 4.9

version 4.7.2
-- add support for opening TrueCrypt volumes using a passphrase together with one or more keyfiles.

version 4.7.3
-- fix issues with Qt5 build
-- show devices even when they have neither partitions nor recognizable file systems.This is useful for TrueCrypt system volumes or
   normal TrueCrypt volumes that are not in partitions.
-- add an ability to change TrueCrypt volume key.
-- add ability to create volumes with different crypto options

version 4.7.4
-- fix a bug that hanged zuluMount-gui on failed attempt at unlocking a plain dm-crypt volume at a none zero offset.a plain dm-crypt volume at
   a none zero offset can be used as a hidden volume ala TrueCrypt hidden volume feature.No protetcion of hidden volume though.

version 4.7.5
-- add abilities in zuluMount-gui to hide useless entries like windows recovery partitions from view.
   These entries can be set to show/hide through tray icon context menu.
